# audio-jones

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  ORCHESTRATOR_FAILURE_LOG.md  README.md  ROADMAP.md  audiojones_layout.ini
.claude/agents/: code-explorer.md  code-reviewer.md  code-scanner.md  cohesion-analyzer.md  dependency-mapper.md  doc-comparator.md  doc-writer.md  interface-designer.md  modularization-analyst.md  module-sync.md  plan-architect.md
.claude/commands/: brainstorm.md  commit.md  complexity.md  feature-plan.md  feature-review.md  implement.md  lint.md  modularize.md  plan.md  research-effect.md  research.md  sync-architecture.md
.github/workflows/: release.yml
docs/: agent-driven-development.md  architecture-roadmap.md  architecture.md  audiothing-existing-impl.md  backlog.md  concerns.md  conventions.md  effects.md  handoff-agent-sim-phase3.md  llm-codebase-review.md  stack.md  structure.md  timeline.md  workflow.md
docs/arch/: architecture.md
docs/modules/: analysis.md  audio.md  automation.md  config.md  main.md  render.md  simulation.md  ui.md  web.md
docs/plans/: agent-simulation-abstraction.md  anamorphic-streak-rework.md  anamorphic-streak.md  angular-field-standardization.md  angular-field-standardization.progress.md  apollonian-tunnel.md  ascii-art.progress.md  attractor-curl-flow-optimization.md  attractor-curl-flow-optimization.progress.md  attractor-flow.progress.md  audio-features.progress.md  band-parameter-mapping.md  bit-crush-walk-modes.md  bloom.progress.md  boids-spatial-hash.md  boids-spatial-hash.progress.md  boids.md  boids.progress.md  bokeh.progress.md  chladni-warp.progress.md  circuit-board-squarenoi.md  circular-mode-to-effect.md  color-grade.progress.md  color-stretch.md  complexity-refactor.md  config-serialization-refactor.md  config-serialization-refactor.progress.md  constellation-audio.md  constellation-enhancements.md  cross-hatching-hand-drawn.md  cross-hatching-hand-drawn.progress.md  cross-hatching.progress.md  curl-advection-accum-injection.md  curl-advection-accum-injection.progress.md  curl-advection-field.md  curl-advection-field.progress.md  curl-advection-generator.md  curl-attractor-color-modes.progress.md  cymatics-symmetric-sources.progress.md  cymatics.md  (+209 more)
docs/research/: advanced-shader-effects.md  anamorphic-streak.md  apollonian_tunnel.md  arc_strobe.md  ascii-art.md  attractor_generator.md  audio-features.md  audio-reactive-patterns.md  beat-detection-filtering.md  beat-detection-techniques.md  bloom.md  bounce-point-movement.md  bus_mixer_ui.md  circuit-board.md  color-capabilities.md  conformal-uv-warping.md  conformal-warps-and-domain-distortion.md  constellation_audio.md  constellation_enhancements.md  corridor-warp.md  cosine-palette.md  crt.md  curl-advection-field.md  curl-advection-generator.md  cyber_march.md  cyclic-cellular-automata.md  dancing_lines.md  data-traffic-behaviors.md  deep-research1.md  density-wave-spiral.md  depth-layers.md  disco-ball.md  dot_matrix.md  dream_fractal.md  dream_fractal_enhancements.md  drekker_paint.md  embedded-resources.md  emergent-flow-effects.md  escape-time-fractals.md  false-color.md  (+104 more)
docs/reviews/: 2025-12-14-gemini-cli-notes.md  2025-12-14-gemini-cli-review.md  2025-12-14-gpt-5.2-notes.md  2025-12-14-gpt-5.2-review.md  2025-12-16-gemini-cli-notes.md  2025-12-16-gemini-cli-review.md  2025-12-16-gpt-5.2-notes.md  2025-12-16-gpt-5.2-review.md  codex-render.md  detailed_shader_optimization_plan.md  future-optimizations.md  gemini-render.md  shaders-performance.md
presets/: ADOREU.json  AIZAAWWAA.json  BINGBANG.json  BLUEE.json  BOIDINGO.json  BOIDIUS.json  BOIDO.json  BUTTERFRIES.json  BUZZBUZZ.json  BluePurp.json  CHANCE.json  CURLER.json  CYMATICBOB.json  DELILAH.json  DOOMDAY.json  Default.json  EASIER.json  FILO.json  FLOOW.json  FLOWBIUS.json  GALACTO.json  GELLO.json  GLITCHYBOB.json  GRAYBOB.json  HEXOS.json  ICEY.json  INVISIBLE.json  JOSHIN.json  LAZAR.json  LINKY.json  MONDO.json  MORBIN.json  OOPY.json  PAINTERMAN.json  RESTEASY.json  RINGER.json  SMOOTHBOB.json  SOLO.json  SOUPA.json  SOUPB.json  (+15 more)
scripts/: gen_font_atlas.py  lint.sh
shaders/: anamorphic_streak_blur.fs  anamorphic_streak_composite.fs  anamorphic_streak_downsample.fs  anamorphic_streak_prefilter.fs  anamorphic_streak_upsample.fs  apollonian_tunnel.fs  arc_strobe.fs  ascii_art.fs  attractor_agents.glsl  attractor_lines.fs  bilateral.fs  bit_crush.fs  bloom_composite.fs  bloom_downsample.fs  bloom_prefilter.fs  bloom_upsample.fs  blur_h.fs  blur_v.fs  boids_agents.glsl  bokeh.fs  butterflies.fs  byzantine_display.fs  byzantine_sim.fs  chladni.fs  chladni_warp.fs  chromatic.fs  chromatic_aberration.fs  circuit_board.fs  clarity.fs  color_grade.fs  color_stretch.fs  conformal_warp.fs  constellation.fs  corridor_warp.fs  cross_hatching.fs  crt.fs  curl_advection.glsl  curl_advection_color.fs  curl_advection_state.fs  curl_flow_agents.glsl  (+166 more)
shaders/experimental/: blend_inject.fs  composite.fs  feedback_exp.fs
src/: audio.c  audio.h  audio_config.h  beat.cpp  beat.h  color_config.h  effect_config.h  effects_config.h  fft.cpp  fft.h  main.c  main.cpp  post_effect.cpp  post_effect.h  preset.cpp  preset.h  render_context.h  spectral.cpp  spectral.h  spectrum.cpp  spectrum.h  spectrum_bars.h  spectrum_config.h  ui.c  ui.cpp  ui.h  ui_layout.cpp  ui_layout.h  ui_preset.cpp  ui_preset.h  ui_widgets.cpp  ui_widgets.h  visualizer.c  visualizer.cpp  visualizer.h  waveform.c  waveform.cpp  waveform.h
src/analysis/: analysis_pipeline.cpp  analysis_pipeline.h  audio_features.cpp  audio_features.h  bands.cpp  bands.h  beat.cpp  beat.h  fft.cpp  fft.h  smoothing.h
src/audio/: audio.cpp  audio.h  audio_config.h
src/automation/: drawable_params.cpp  drawable_params.h  easing.h  lfo.cpp  lfo.h  mod_bus.cpp  mod_bus.h  mod_sources.cpp  mod_sources.h  modulation_engine.cpp  modulation_engine.h  param_registry.cpp  param_registry.h
src/config/: anamorphic_streak_config.h  app_configs.h  ascii_art_config.h  (+92 more)
web/: CLAUDE.md  app.js  index.html  style.css
(+1085 files in other folders)
